// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationContainer styles when the current page is 1 should render with default styles 1`] = `
.circuit-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 12px;
}

.circuit-1 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-1:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-1:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-1:hover {
  background-color: #D8DDE1;
}

.circuit-1:hover,
.circuit-1:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-1[href] {
  display: inline-block;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-1:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-4 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-4:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-4:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-4:hover {
  background-color: #D8DDE1;
}

.circuit-4:hover,
.circuit-4:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-4[href] {
  display: inline-block;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<div
  class="circuit-6 circuit-7"
>
  <button
    class="circuit-0 circuit-1 circuit-2"
    data-testid="pagination-button-previous"
    disabled=""
  />
  Children Element
  <button
    class="circuit-3 circuit-4 circuit-2"
    data-testid="pagination-button-next"
  />
</div>
`;

exports[`PaginationContainer styles when the current page is not the first and last page should render with default styles 1`] = `
.circuit-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 12px;
}

.circuit-1 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-1:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-1:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-1:hover {
  background-color: #D8DDE1;
}

.circuit-1:hover,
.circuit-1:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-1[href] {
  display: inline-block;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-1:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-4 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-4:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-4:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-4:hover {
  background-color: #D8DDE1;
}

.circuit-4:hover,
.circuit-4:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-4[href] {
  display: inline-block;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<div
  class="circuit-6 circuit-7"
>
  <button
    class="circuit-0 circuit-1 circuit-2"
    data-testid="pagination-button-previous"
  />
  Children Element
  <button
    class="circuit-3 circuit-4 circuit-2"
    data-testid="pagination-button-next"
  />
</div>
`;

exports[`PaginationContainer styles when the current page is the last page should render with default styles 1`] = `
.circuit-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 12px;
}

.circuit-1 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-1:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-1:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-1:hover {
  background-color: #D8DDE1;
}

.circuit-1:hover,
.circuit-1:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-1[href] {
  display: inline-block;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-1:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-4 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-4:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-4:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-4:hover {
  background-color: #D8DDE1;
}

.circuit-4:hover,
.circuit-4:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-4[href] {
  display: inline-block;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<div
  class="circuit-6 circuit-7"
>
  <button
    class="circuit-0 circuit-1 circuit-2"
    data-testid="pagination-button-previous"
  />
  Children Element
  <button
    class="circuit-3 circuit-4 circuit-2"
    data-testid="pagination-button-next"
    disabled=""
  />
</div>
`;
